# hotdoc_bootstrap_theme

./: .gitignore  Gruntfile.js  Makefile  README.md  bld  bower.json  karma.conf.js  meson.build  meson_options.txt  package.json  pyproject.toml
.github/workflows/: python.yml
app/assets/javascript/: frontend.js  language_switching.js  lines_around_headings.js  navbar_offset_scroller.js  navigation.js  search.js  searchit.js  tag_filtering.js  utils.js
app/assets/stylesheets/: base.less  bootstrapxl.less  frontend.less  hotdoc-variables.less  search.less  sidenav.less  tables.less
app/assets/templates/: base_page.html  base_symbol_summary.html  my_template.html  site_navigation.html  summary.html
css/: meson.build
fonts/: meson.build
images/: meson.build
js/: meson.build
js/search/: meson.build
sandbox/: Gemfile  Guardfile  searchit.js
src/: meson.build  theme.json
src/css/: frontend.less  light-frontend.less  light-sitenav.less  meson.build  sitenav.less
src/fonts/: meson.build
src/images/: meson.build
src/js/: language_switching.js  meson.build  navbar_offset_scroller.js  navigation.js  search.js  side-content-toggles.js  styleswitcher.js  tag_filtering.js  utils.js
src/js/search/: meson.build
src/less/: base.less  dark-frontend.less  dark-sitenav.less  frontend.less  hotdoc-variables.less  sitenav.less
src/templates/: base_page.html  enum_member.html  member_list.html  meson.build  navbar.html  page_content.html  site_navigation.html  subpages.html
templates/: meson.build
tests/js/: utils.js
tests/js/snippets/: gi-index.html  index.html
